Update the calculator to support 15 min intervals.